# bonditglobal-assignment

./: README.md  cli.py  pyproject.toml
flights/: airport.py  errors.py  flight.py
samplefiles/: input.csv  sample.csv
server/: server.py
